# imageproc

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: actionlint.yml  check.yml  ci.yml  doc.yml  format.yml  safety.yml  scheduled.yml  test.yml  wasm.yml
benches/: transformation_combination.rs
examples/: bilateral.rs  blend.rs  brief.rs  bug.rs  color_effects.rs  display_image.rs  display_multiple_images.rs  drawing.rs  font.rs  gradients.rs  hog.rs  hough.rs  masked.rs  orb.rs  projection.rs  scharr.rs  seam_carving.rs  template_matching.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: affine.rs  binary_descriptors.rs  compose.rs  connectivity.rs  contours.rs  contrast.rs  corners.rs  definitions.rs  distance_transform.rs  doc_macros.rs  drawing.rs  edges.rs  filter.rs  geometric_transformations.rs  geometry.rs  gradients.rs  haar.rs  hog.rs  hough.rs  imghash.rs  integral_image.rs  integralimage.rs  kernel.rs  lib.rs  local_binary_patterns.rs  localbinarypatterns.rs  map.rs  math.rs  morphology.rs  multiarray.rs  noise.rs  pixelops.rs  point.rs  proj.rs  property_testing.rs  proptest_utils.rs  rect.rs  rect_ext.rs  region_labelling.rs  regionlabelling.rs  (+10 more)
src/binary_descriptors/: brief.rs  constants.rs  mod.rs  orb.rs
src/debug/: color_palette.rs  mod.rs
src/debug/color_palette/: colourado.rs
src/drawing/: bezier.rs  canvas.rs  conics.rs  cross.rs  fill.rs  line.rs  mod.rs  polygon.rs  rect.rs  text.rs
src/filter/: bilateral.rs  box_filter.rs  fast_blur.rs  median.rs  mod.rs  sharpen.rs
src/image_hash/: average_hash.rs  bits.rs  mod.rs  phash.rs  signals.rs
src/imghash/: bits.rs  phash.rs  signals.rs
tests/: interpolate-soundness.rs  kernel-soundness.rs  lib.rs  regression.rs
