[package]
name = "imageproc"
version = "0.26.1"
authors = ["theotherphil"]
# note: when changed, also update `msrv` in `.github/workflows/check.yml`
rust-version = "1.81.0"
edition = "2021"
license = "MIT"
description = "Image processing operations"
readme = "README.md"
repository = "https://github.com/image-rs/imageproc.git"
homepage = "https://github.com/image-rs/imageproc"
exclude = [".github/*", "examples/*", "tests/*"]

[features]
default = ["rayon", "image/default"]
display-window = ["sdl2"]
rayon = ["dep:rayon", "image/rayon"]

[dependencies]
ab_glyph = { version = "0.2.23", default-features = false, features = ["std"] }
approx = { version = "0.5", default-features = false }
image = { version = "0.25.6", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = [
    "use_std",
] }
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
num = { version = "0.4.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
rand_distr = { version = "0.4.3", default-features = false }
rayon = { version = "1.8.0", optional = true, default-features = false }
sdl2 = { version = "0.36", optional = true, default-features = false, features = [
    "bundled",
] }
katexit = { version = "0.1.4", optional = true, default-features = false }
rustdct = "0.7.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
proptest = "1.4.0"
wasm-bindgen-test = "0.3.38"

[package.metadata.docs.rs]
# See https://github.com/image-rs/imageproc/issues/358
# all-features = true
features = ["property-testing", "katexit"]

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
